# telegram-bot-rest-client

./: .gitignore  Cargo.toml  README.md  tbrc.conf-dist
src/: config.rs  config_tests.rs  logging.rs  main.rs
tests/: missing-auth-token.conf  missing-base-url.conf  telegram-bot-rest-client.conf
