[package]
name = "telegram-bot-rest-client"
version = "1.1.0"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

regex = "1"

reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
base64 = "0.12"

# Linux Only
# openssl = { version = "0.10", features = ["vendored"] }